src/objects/Sales_Order__c.object
<CustomObject>
    <fields>
        <fullName>Child__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <displayFormat>SFDC-Order{000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>service_request_form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>service request form</label>
        <referenceTo>service_request_form__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>